create HTML paeges for burger and pizza
Add burger HTML
Add pizza HTML

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <h1>Odin Recipes</h1>
     There are many recipes on this page and if you want to try my favorite 
     <a href="recipes/lasagna.html">lasagna</a> all you have to do is click.
+    <p>My second favorite this would be a stone baked <a href="recipes/pizza.html">pizza</a>.</p>
+    <p>The last dish I would recommend you try would be my famous <a href="recipes/burger.html">ground beef 
+        burger</a>.</p>
 </body>
 </html>
