--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -50,7 +50,7 @@
             at 375°F (190°C) for about 30 minutes, then uncover and bake another 10–15 minutes until 
             the top is bubbling and lightly browned. Let the lasagna rest for at least 10 minutes before 
             slicing so the layers set and serve cleanly.</p>     
-
+<p>Check out my recipe for <a href="pizza.html">pizza</a> or a <a href="burger.html">burger</a>.    </p>
     Return to <a href="../index.html">main</a> page.
 </body>
 </html>
