--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -18,10 +18,10 @@
             <li>Sugar – 1 tsp</li>
             <li>Salt – 1 ½ tsp</li>
         <strong>Sauce</strong>
-            <li>Crushed tomatoes – 1 can (14–15 oz / 400 g</li>)
+            <li>Crushed tomatoes – 1 can (14–15 oz / 400 g)</li>
             <li>Garlic – 2 cloves, minced</li>
             <li>Olive oil – 1–2 tbsp</li>
-            <li>Dried oregano – 1 ts</li>p
+            <li>Dried oregano – 1 tsp</li>
             <li>Salt and pepper – to taste</li>
         <strong>Toppings</strong>
             <li>Shredded mozzarella cheese – 2 cups (200 g)</li>
